--- a/client/package.json
+++ b/client/package.json
@@ -8,17 +8,15 @@
     "cra-template": "1.2.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "react": "^19.0.0",
-<<<<<<< HEAD
     "react-bootstrap": "^2.10.9",
-=======
->>>>>>> 8f2b396a26c60b0a53bc347c862d0b60cb5c020c
     "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
-    "react-router-dom": "^7.1.3",
+    "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
